# crebain

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  flake.nix  index.html  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  ros-ci.yml  scorecard.yml
.windsurf/workflows/: manual-smoke-test.md
docs/: MANUAL_SMOKE_TEST.md  MODEL_CONTRACTS.md  NCP_BRIDGE_HANDOFF.md  RELEASE_ACCEPTANCE.md  RELEASE_EVIDENCE.md  SENSOR_FUSION.md  SENSOR_FUSION_AGENT_SPECS.md
public/models/: README.md  maverick-drone.glb
public/splats/: README.md
ros/: CMakeLists.txt  README.md  package.xml
ros/launch/: multi_drone.launch  rosbridge.launch  simulation.launch  single_drone.launch
ros/msg/: AcousticDetection.msg  AcousticDetectionArray.msg  DroneTarget.msg  InterceptionCommand.msg  InterceptionStatus.msg  RadarDetection.msg  RadarDetectionArray.msg  ThermalDetection.msg  ThermalDetectionArray.msg
ros/srv/: AbortMission.srv  InitiateIntercept.srv
scripts/: check-bundle-size.mjs  perf-smoke.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: Package.swift
src-tauri/src/: coreml.rs  lib.rs  main.rs  onnx_detector.rs  sensor_fusion.rs
src/components/: AboutModal.tsx  BasePanel.tsx  CameraFeed.tsx  CameraGrid.tsx  CrebainViewer.tsx  DetectionOverlay.tsx  DronePanel.tsx  DroneSpawnPanel.tsx  DroneVisualizer.tsx  ErrorBoundary.tsx  ObjectTransformControls.tsx  PerformancePanel.tsx  ROSConnectionPanel.tsx  SaveLoadPanel.tsx  SensorFusionPanel.tsx
src/context/: UIScaleContext.tsx
src/detection/: AdvancedSensorFusion.ts  CoreMLDetector.ts  DetectionWorker.ts  MoondreamDetector.ts  RFDETRDetector.ts  SensorFusion.ts  YOLODetector.ts  benchmarkBudgets.json  nativeDetectionResult.ts  scenarioFixtures.ts  tensorValidation.ts  types.ts
src/hooks/: index.ts  useCoreMLDetection.ts  useCoreMLDiagnostics.ts  useCrebainScene.ts  useDetection.ts  useDetectionLoop.ts  useDraggable.ts  useDraggable3D.ts  useDraggablePanel.ts  useDroneController.ts  useDroneSystem.ts  useGazeboDrones.ts  useGazeboSimulation.ts  useKeyboardControls.ts  useObjectSelection.ts  usePerformanceTracker.ts  useRosActuatorLoop.ts  useRosBridge.ts  (+4 more)
(+89 files in other folders)
